# RINS-Project

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/exercise1/: Greeting.h  ReverseRequest.h  ReverseResponse.h
devel/include/exercise2/: move.h  moveRequest.h  moveResponse.h
devel/include/task1/: Test.h
devel/lib/exercise1/: client_node  hello_world  publish_custom  publish_string  service_node  subscribe_custom  subscribe_string
devel/lib/exercise2/: pubvel
devel/lib/pkgconfig/: exercise1.pc  exercise2.pc  task1.pc
devel/lib/task1/: hello_gamma  publish_sm  subscribe_sm
exercise2/: CMakeLists.txt
exercise2/launch/: moveTurtle.launch
exercise2/scripts/: move_client.py  movement
exercise2/srv/: move.srv
exercise3/: CMakeLists.txt  package.xml
exercise3/scripts/: nav_goal.py
exercise3/src/: nav_goal.cpp
exercise4/: CMakeLists.txt  package.xml
exercise4/launch/: amcl_demo_sim.launch  rins_world.launch  start_robot.launch
exercise4/scripts/: breadcrumbs
exercise4/worlds/: rins.world
src/exercise2/: CMakeLists.txt
src/exercise2/launch/: moveTurtle.launch
src/exercise2/scripts/: move_client.py  (+3 more)
src/pcl_demos/: CMakeLists.txt
src/rins_navigation/: CMakeLists.txt  package.xml
src/rins_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
src/rins_navigation/launch/includes/: move_base.launch.xml
src/rins_navigation/launch/includes/amcl/: amcl.launch.xml  kinect_amcl.launch.xml
src/rins_navigation/maps/: gamma_ray_map.pgm  gamma_ray_map.yaml
src/task1/: CMakeLists.txt  package.xml
(+48 files in other folders)
